# lists-alvaroguerreroj-lists

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  README.md  circular.hpp  debug.ini  double.hpp  forward.hpp  justfile  list.hpp  meson.build  node.hpp  shell.nix  tester.hpp
include/: circular.hpp  circular_iterator.hpp  double.hpp  forward.hpp  list.hpp  meson.build  node.hpp  tester.hpp
src/: main.cpp  meson.build
