project('lists', 'cpp',
        version : '1.0.0',
        license : 'GPL-3.0-or-later',
        default_options : [
                           'cpp_std=c++17',
                           'warning_level=3',
                           'werror=true'
                          ])

inc = include_directories('include')

subdir('include')
subdir('src')
